@@ -1,24 +1,28 @@
-# README
+# rubymine-spec-sandbox
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Sample app for writing RSpec with RubyMine
 
-Things you may want to cover:
+## Info
 
-* Ruby version
+![mac](https://cloud.githubusercontent.com/assets/1148320/22761630/f239595a-ee9e-11e6-9373-fcda375bf5a4.png)
 
-* System dependencies
+<img width="636" alt="rubymine" src="https://cloud.githubusercontent.com/assets/1148320/22761639/fafd2d8c-ee9e-11e6-9197-5c4f8a286d2e.png">
 
-* Configuration
+- Ruby 2.4.0
+- Rails 5.0.1
+- rspec-rails 3.5.2
+- Capybara 2.12.0
 
-* Database creation
+```
+$ cat ~/Library/Preferences/RubyMine2016.3/idea.vmoptions 
+-Xms1024m
+-Xmx2048m
+-XX:MaxPermSize=500m
+-XX:ReservedCodeCacheSize=128m
+-XX:+UseCodeCacheFlushing
+-XX:+UseCompressedOops
+```
 
-* Database initialization
+## Movie
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+https://youtu.be/5Cshpxb5GOM
